// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconGPlus /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconGPlus /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconGPlus /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconGPlus /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconGPlus /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconGPlus /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconGPlus /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconGPlus /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 295 256"
    width="1.15234375em"
  >
      
    <path
      d="M260.5 139.2v29h-25v-29h-28v-25h28v-28h25v28h27v25h-27zm-68.2-24h-90.8v31h53c-7.9 39.5-61.2 53.4-89.8 27.6-29.4-22.6-28-72.3 2.6-93.3 21.3-17 51.7-12.8 73 1.9 8.4-7.7 16.2-16 23.8-24.6-17.8-14.1-39.5-24.2-62.7-23.1C53 33.1 8.6 75.3 7.8 123.5c-3.1 39.4 22.7 78.5 59.6 91.9 36.6 13.3 83.5 4.2 106.8-28.3 15.1-20.9 18.1-47.4 18.1-71.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconGPlus /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
